--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ a{text-decoration:none;color:#22ac38;}
 .desc{font-size:22px;line-height:28px;text-align:center;margin-bottom:12px;}
 .header{background-color:#159957;background-image:linear-gradient(120deg,#155799,#159957);color:#fff;padding:50px 0;text-align:center;}
 hr{border-color:#f60;border-width:3px;max-width:50px;margin-top:20px;margin-bottom:20px;border:0;border-top:1px solid #eee;height:0;-webkit-box-sizing:content-box;-moz-box-sizing:content-box;box-sizing:content-box;}
-.ws-tag a{display:inline-block;font-size:18px;color:#fff;border:1px solid #fff;padding:5px 30px;margin-right:12px;margin-bottom:10px;height:30px;line-height:30px;border-radius:30px;cursor:pointer;}
+.ws-tag a{display:inline-block;font-size:16px;color:#fff;border:1px solid #fff;padding:5px 30px;margin-right:15px;margin-bottom:10px;line-height:28px;border-radius:2px;cursor:pointer;}
 .ws-tag a:hover{color:#22ac38;border:1px solid #fff;background-color:#fff;}
 .desc2{font-size:14px;}
 .content h2,.content h3{padding-bottom:10px;margin:40px 0 20px;border-bottom:1px solid #EEE;}
