--- a/style.css
+++ b/style.css
@@ -1,20 +1,21 @@
 body,h1,h2,h3,h4,h5,h6,p,ul,ol,dl,dd,form,input,textarea,select,button{margin:0;padding:0;}em,i{font-style:normal;}
 li,ul{list-style:none;}ul{zoom:1;}img{border:none;border:0;margin:0;padding:0;vertical-align:middle;}.cl{clear:both;}.fl,.mfl{float:left;}.fr,.mfr{float:right;}.m-auto{margin:0 auto;}
-body{color:#333;font-family:arial,'Hiragino Sans GB',"Microsoft YaHei","Lucida Grande","Lucida Sans Unicode",Helvetica,Arial,Verdana,tahoma,simsun,sans-serif;}
+body{color:#333;line-height:1.5;font-family:arial,'Hiragino Sans GB',"Microsoft YaHei","Lucida Grande","Lucida Sans Unicode",Helvetica,Arial,Verdana,tahoma,simsun,sans-serif;}
 .mt10{margin-top:10px;}.mb10{margin-bottom:10px;}
 a{text-decoration:none;color:#22ac38;}
 
 .content{width:540px;margin:0 auto;}
-.avatar{width:100px;height:100px;margin-bottom:22px;border-radius:50%;}
-.desc{font-size:22px;line-height:28px;text-align:center;margin-bottom:12px;}
+.avatar{width:100px;height:100px;margin-bottom:22px;border-radius:50%;border:2px solid rgba(255, 255, 255, 0.2);}
+.h1desc{font-size:2.4rem;margin-bottom:12px;}.desc{font-size:1.25rem;margin-bottom:2rem;font-weight:normal;opacity:0.7;}
 .header{background-color:#159957;background-image:linear-gradient(120deg,#155799,#159957);color:#fff;padding:50px 0;text-align:center;}
 hr{border-color:#f60;border-width:3px;max-width:50px;margin-top:20px;margin-bottom:20px;border:0;border-top:1px solid #eee;height:0;-webkit-box-sizing:content-box;-moz-box-sizing:content-box;box-sizing:content-box;}
-.ws-tag a{display:inline-block;font-size:16px;color:#fff;border:1px solid #fff;padding:5px 30px;margin-right:15px;margin-bottom:10px;line-height:28px;border-radius:2px;cursor:pointer;}
+.ws-tag a{display:inline-block;font-size:16px;color:rgba(255, 255, 255, 0.7);padding:5px 30px;margin-right:15px;margin-bottom:10px;line-height:28px;border-radius:2px;cursor:pointer;background-color: rgba(255, 255, 255, 0.08);border-color: rgba(255, 255, 255, 0.2);border-style: solid;border-width: 1px;border-radius: 0.3rem;transition: color 0.2s, background-color 0.2s, border-color 0.2s;}
 .ws-tag a:hover{color:#22ac38;border:1px solid #fff;background-color:#fff;}
-.desc2{font-size:14px;}
+.desc2{font-size:16px;}
 .content h2,.content h3{padding-bottom:10px;margin:40px 0 20px;border-bottom:1px solid #EEE;}
 .content .title{word-break:break-word;margin:20px 0 30px;font-size:34px;font-weight:700;line-height:1.3;}
 
 @media screen and (max-width:540px){
 .content{width:90%;}
 }
+
