--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body,h1,h2,h3,h4,h5,h6,p,ul,ol,dl,dd,form,input,textarea,select,button{margin:0;padding:0;}em,i{font-style:normal;}
 li,ul{list-style:none;}ul{zoom:1;}img{border:none;border:0;margin:0;padding:0;vertical-align:middle;}.cl{clear:both;}.fl,.mfl{float:left;}.fr,.mfr{float:right;}.m-auto{margin:0 auto;}
-body{color:#333;line-height:1.5;font-family:arial,'Hiragino Sans GB',"Microsoft YaHei","Lucida Grande","Lucida Sans Unicode",Helvetica,Arial,Verdana,tahoma,simsun,sans-serif;}
-.mt10{margin-top:10px;}.mb10{margin-bottom:10px;}
-a{text-decoration:none;color:#22ac38;}
+body{color:#333;font-size:16px;line-height:1.5;font-family:arial,'Hiragino Sans GB',"Microsoft YaHei","Lucida Grande","Lucida Sans Unicode",Helvetica,Arial,Verdana,tahoma,simsun,sans-serif;}
+.mt10{margin-top:10px;}.mb10{margin-bottom:10px;}img:hover{filter:alpha(opacity=90);opacity:0.9;}
+a{text-decoration:none;color:#22ac38;}a:hover{text-decoration:underline;}
 
-.content{width:540px;margin:0 auto;}
+.content{width:640px;margin:0 auto;}
 .avatar{width:100px;height:100px;margin-bottom:22px;border-radius:50%;border:2px solid rgba(255, 255, 255, 0.2);}
 .h1desc{font-size:2.4rem;margin-bottom:12px;}.desc{font-size:1.25rem;margin-bottom:2rem;font-weight:normal;opacity:0.7;}
 .header{background-color:#159957;background-image:linear-gradient(120deg,#155799,#159957);color:#fff;padding:50px 0;text-align:center;}
